# pdf-extract

./: .dockerignore  .env.dev  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.hybrid  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c5841080ea0_add_auto_reprocessed_and_reprocess_.py  8126ef07d529_add_use_hybrid_to_jobs.py  b3446bd92fa2_initial_tables.py
app/: config.py  main.py
app/model/: models.py
app/repository/: chunk_repository.py  file_repository.py  job_repository.py  result_repository.py
app/router/: file_router.py  job_router.py
app/schema/: schemas.py
app/service/: chunk_service.py  csv_service.py  docx_service.py  file_service.py  hwpx_service.py  job_service.py  pdf_service.py  pptx_service.py  quality_checker.py  text_normalizer.py  xlsx_service.py
app/templates/: base.html  detail.html  files.html  upload.html
docker/: start-app.sh  start-hybrid.sh
docs/: design.md
docs/superpowers/plans/: 2026-03-25-pdf-extraction-api.md
mcp_server/: __init__.py  __main__.py  server.py  tools.py
tests/: conftest.py  test_chunk_service.py  test_config.py  test_csv_service.py  test_docx_service.py  test_file_router.py  test_hwpx_service.py  test_job_router.py  test_mcp_server.py  test_models.py  test_pdf_service.py  test_pptx_service.py  test_quality_checker.py  test_schemas.py  test_text_normalizer.py  test_xlsx_service.py
